--- a/.env.example
+++ b/.env.example
@@ -47,3 +47,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+FWA_SLACK_WEBHOOK_URL=""
+FWA_SLACK_CHANNEL="#fwa"
+FWA_CASE="Lama Lama"
